add creation of marker gene table

--- a/ipynb/day2-4_visualization.ipynb
+++ b/ipynb/day2-4_visualization.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "da6a6f44-4a88-4bb4-aa70-843434d02d8b",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6ded009a-3d69-46ff-bc62-51b059a25388",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cf9ca046-bb99-43a9-aa0d-37b509759d24",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "    obsp: 'connectivities', 'distances'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "31d1782a-b522-4ef7-aae8-6313a58df860",
    "metadata": {
     "colab": {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3b89a3ee-0f8b-4c68-b9c8-2d837eff5e41",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5dec4127-2d0d-419a-9335-9bd045129336",
    "metadata": {
     "colab": {
@@ -224,6 +224,451 @@
     "sc.tl.rank_genes_groups(\n",
     "    adata_raw_norm, use_raw=False, groupby=\"leiden\", method=\"wilcoxon\", key_added=\"dea_leiden\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8a829806-5df5-457f-bbfc-6ae7e459f172",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['params', 'names', 'scores', 'pvals', 'pvals_adj', 'logfoldchanges'])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adata_raw_norm.uns[\"dea_leiden\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c6ef562b-f629-454f-8e8a-925a1b7be1b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cluster0</th>\n",
+       "      <th>Cluster1</th>\n",
+       "      <th>Cluster2</th>\n",
+       "      <th>Cluster3</th>\n",
+       "      <th>Cluster4</th>\n",
+       "      <th>Cluster5</th>\n",
+       "      <th>Cluster6</th>\n",
+       "      <th>Cluster7</th>\n",
+       "      <th>Cluster8</th>\n",
+       "      <th>Cluster9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Cluster14</th>\n",
+       "      <th>Cluster15</th>\n",
+       "      <th>Cluster16</th>\n",
+       "      <th>Cluster17</th>\n",
+       "      <th>Cluster18</th>\n",
+       "      <th>Cluster19</th>\n",
+       "      <th>Cluster20</th>\n",
+       "      <th>Cluster21</th>\n",
+       "      <th>Cluster22</th>\n",
+       "      <th>Cluster23</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RPL21</td>\n",
+       "      <td>HBA2</td>\n",
+       "      <td>S100A8</td>\n",
+       "      <td>SLC25A37</td>\n",
+       "      <td>CD74</td>\n",
+       "      <td>HBB</td>\n",
+       "      <td>FTH1</td>\n",
+       "      <td>DNTT</td>\n",
+       "      <td>RPS4X</td>\n",
+       "      <td>CD74</td>\n",
+       "      <td>...</td>\n",
+       "      <td>RPS27</td>\n",
+       "      <td>CD52</td>\n",
+       "      <td>CD79B</td>\n",
+       "      <td>NKG7</td>\n",
+       "      <td>PRDX2</td>\n",
+       "      <td>ATPIF1</td>\n",
+       "      <td>MPO</td>\n",
+       "      <td>HBD</td>\n",
+       "      <td>SLC25A37</td>\n",
+       "      <td>SSR4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RPS27</td>\n",
+       "      <td>HBB</td>\n",
+       "      <td>S100A9</td>\n",
+       "      <td>HBD</td>\n",
+       "      <td>CST3</td>\n",
+       "      <td>HBA2</td>\n",
+       "      <td>FTL</td>\n",
+       "      <td>IGLL1</td>\n",
+       "      <td>RPS18</td>\n",
+       "      <td>MS4A1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>RPL21</td>\n",
+       "      <td>TMSB4X</td>\n",
+       "      <td>IGHM</td>\n",
+       "      <td>B2M</td>\n",
+       "      <td>GYPB</td>\n",
+       "      <td>APOC1</td>\n",
+       "      <td>AZU1</td>\n",
+       "      <td>GYPA</td>\n",
+       "      <td>HBD</td>\n",
+       "      <td>MZB1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RPS29</td>\n",
+       "      <td>HBA1</td>\n",
+       "      <td>LYZ</td>\n",
+       "      <td>HMBS</td>\n",
+       "      <td>HLA-DRA</td>\n",
+       "      <td>HBA1</td>\n",
+       "      <td>TYROBP</td>\n",
+       "      <td>VPREB1</td>\n",
+       "      <td>RPS8</td>\n",
+       "      <td>CD79A</td>\n",
+       "      <td>...</td>\n",
+       "      <td>RPS29</td>\n",
+       "      <td>TRAC</td>\n",
+       "      <td>TCL1A</td>\n",
+       "      <td>HLA-B</td>\n",
+       "      <td>HEMGN</td>\n",
+       "      <td>NME4</td>\n",
+       "      <td>SRGN</td>\n",
+       "      <td>HMBS</td>\n",
+       "      <td>SLC4A1</td>\n",
+       "      <td>HSP90B1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RPL13</td>\n",
+       "      <td>SNCA</td>\n",
+       "      <td>S100A6</td>\n",
+       "      <td>SLC4A1</td>\n",
+       "      <td>HLA-DPB1</td>\n",
+       "      <td>BPGM</td>\n",
+       "      <td>CTSS</td>\n",
+       "      <td>PTMA</td>\n",
+       "      <td>RPLP0</td>\n",
+       "      <td>HLA-DRA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>RPL13</td>\n",
+       "      <td>LTB</td>\n",
+       "      <td>CD24</td>\n",
+       "      <td>CCL5</td>\n",
+       "      <td>AHSP</td>\n",
+       "      <td>TMEM14C</td>\n",
+       "      <td>ELANE</td>\n",
+       "      <td>SLC25A37</td>\n",
+       "      <td>BNIP3L</td>\n",
+       "      <td>FKBP11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>RPLP2</td>\n",
+       "      <td>BNIP3L</td>\n",
+       "      <td>S100A4</td>\n",
+       "      <td>SLC2A1</td>\n",
+       "      <td>HLA-DRB1</td>\n",
+       "      <td>UBB</td>\n",
+       "      <td>FCER1G</td>\n",
+       "      <td>HMGB1</td>\n",
+       "      <td>RPS24</td>\n",
+       "      <td>CD37</td>\n",
+       "      <td>...</td>\n",
+       "      <td>RPLP2</td>\n",
+       "      <td>B2M</td>\n",
+       "      <td>RCSD1</td>\n",
+       "      <td>HLA-C</td>\n",
+       "      <td>CA2</td>\n",
+       "      <td>FAM178B</td>\n",
+       "      <td>CFD</td>\n",
+       "      <td>SLC4A1</td>\n",
+       "      <td>AHSP</td>\n",
+       "      <td>SEC11C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Cluster0 Cluster1 Cluster2  Cluster3  Cluster4 Cluster5 Cluster6 Cluster7  \\\n",
+       "0    RPL21     HBA2   S100A8  SLC25A37      CD74      HBB     FTH1     DNTT   \n",
+       "1    RPS27      HBB   S100A9       HBD      CST3     HBA2      FTL    IGLL1   \n",
+       "2    RPS29     HBA1      LYZ      HMBS   HLA-DRA     HBA1   TYROBP   VPREB1   \n",
+       "3    RPL13     SNCA   S100A6    SLC4A1  HLA-DPB1     BPGM     CTSS     PTMA   \n",
+       "4    RPLP2   BNIP3L   S100A4    SLC2A1  HLA-DRB1      UBB   FCER1G    HMGB1   \n",
+       "\n",
+       "  Cluster8 Cluster9  ... Cluster14 Cluster15 Cluster16 Cluster17 Cluster18  \\\n",
+       "0    RPS4X     CD74  ...     RPS27      CD52     CD79B      NKG7     PRDX2   \n",
+       "1    RPS18    MS4A1  ...     RPL21    TMSB4X      IGHM       B2M      GYPB   \n",
+       "2     RPS8    CD79A  ...     RPS29      TRAC     TCL1A     HLA-B     HEMGN   \n",
+       "3    RPLP0  HLA-DRA  ...     RPL13       LTB      CD24      CCL5      AHSP   \n",
+       "4    RPS24     CD37  ...     RPLP2       B2M     RCSD1     HLA-C       CA2   \n",
+       "\n",
+       "  Cluster19 Cluster20 Cluster21 Cluster22 Cluster23  \n",
+       "0    ATPIF1       MPO       HBD  SLC25A37      SSR4  \n",
+       "1     APOC1      AZU1      GYPA       HBD      MZB1  \n",
+       "2      NME4      SRGN      HMBS    SLC4A1   HSP90B1  \n",
+       "3   TMEM14C     ELANE  SLC25A37    BNIP3L    FKBP11  \n",
+       "4   FAM178B       CFD    SLC4A1      AHSP    SEC11C  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marker_genes = pd.DataFrame(adata_raw_norm.uns[\"dea_leiden\"][\"names\"])\n",
+    "marker_genes.columns = [\"Cluster\" + str(x) for x in range(0, len(adata_raw_norm.obs[\"leiden\"].unique()))]\n",
+    "marker_genes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "42e574b8-b97b-4b75-b92b-ffa674c206d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cluster0</th>\n",
+       "      <th>Cluster1</th>\n",
+       "      <th>Cluster2</th>\n",
+       "      <th>Cluster3</th>\n",
+       "      <th>Cluster4</th>\n",
+       "      <th>Cluster5</th>\n",
+       "      <th>Cluster6</th>\n",
+       "      <th>Cluster7</th>\n",
+       "      <th>Cluster8</th>\n",
+       "      <th>Cluster9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Cluster14</th>\n",
+       "      <th>Cluster15</th>\n",
+       "      <th>Cluster16</th>\n",
+       "      <th>Cluster17</th>\n",
+       "      <th>Cluster18</th>\n",
+       "      <th>Cluster19</th>\n",
+       "      <th>Cluster20</th>\n",
+       "      <th>Cluster21</th>\n",
+       "      <th>Cluster22</th>\n",
+       "      <th>Cluster23</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.696161</td>\n",
+       "      <td>4.536685</td>\n",
+       "      <td>6.127852</td>\n",
+       "      <td>3.926013</td>\n",
+       "      <td>3.412972</td>\n",
+       "      <td>4.632360</td>\n",
+       "      <td>2.845425</td>\n",
+       "      <td>4.403666</td>\n",
+       "      <td>1.796766</td>\n",
+       "      <td>3.350841</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.718245</td>\n",
+       "      <td>2.538189</td>\n",
+       "      <td>4.155026</td>\n",
+       "      <td>5.839576</td>\n",
+       "      <td>3.842825</td>\n",
+       "      <td>2.919723</td>\n",
+       "      <td>7.224152</td>\n",
+       "      <td>4.162687</td>\n",
+       "      <td>3.580635</td>\n",
+       "      <td>3.880045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.909575</td>\n",
+       "      <td>4.749588</td>\n",
+       "      <td>5.971000</td>\n",
+       "      <td>4.183972</td>\n",
+       "      <td>3.933990</td>\n",
+       "      <td>4.355470</td>\n",
+       "      <td>3.283564</td>\n",
+       "      <td>4.142626</td>\n",
+       "      <td>1.714990</td>\n",
+       "      <td>5.916070</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.482474</td>\n",
+       "      <td>1.988572</td>\n",
+       "      <td>3.510608</td>\n",
+       "      <td>1.826526</td>\n",
+       "      <td>3.914904</td>\n",
+       "      <td>5.641148</td>\n",
+       "      <td>6.555845</td>\n",
+       "      <td>3.788034</td>\n",
+       "      <td>3.828166</td>\n",
+       "      <td>4.938936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.893222</td>\n",
+       "      <td>4.461418</td>\n",
+       "      <td>6.040055</td>\n",
+       "      <td>3.383904</td>\n",
+       "      <td>3.215807</td>\n",
+       "      <td>4.279613</td>\n",
+       "      <td>4.806640</td>\n",
+       "      <td>3.918157</td>\n",
+       "      <td>1.856143</td>\n",
+       "      <td>3.856486</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.645742</td>\n",
+       "      <td>3.124133</td>\n",
+       "      <td>4.694790</td>\n",
+       "      <td>2.050864</td>\n",
+       "      <td>3.797841</td>\n",
+       "      <td>3.448345</td>\n",
+       "      <td>4.227748</td>\n",
+       "      <td>3.277330</td>\n",
+       "      <td>2.918315</td>\n",
+       "      <td>3.337664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.828848</td>\n",
+       "      <td>2.532328</td>\n",
+       "      <td>3.790318</td>\n",
+       "      <td>3.315197</td>\n",
+       "      <td>3.314304</td>\n",
+       "      <td>2.452660</td>\n",
+       "      <td>4.474485</td>\n",
+       "      <td>2.222489</td>\n",
+       "      <td>1.779858</td>\n",
+       "      <td>2.956043</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.580002</td>\n",
+       "      <td>2.921369</td>\n",
+       "      <td>4.179593</td>\n",
+       "      <td>6.373088</td>\n",
+       "      <td>3.689547</td>\n",
+       "      <td>3.167665</td>\n",
+       "      <td>6.572220</td>\n",
+       "      <td>3.602345</td>\n",
+       "      <td>2.388110</td>\n",
+       "      <td>4.894440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.628970</td>\n",
+       "      <td>2.246099</td>\n",
+       "      <td>3.793867</td>\n",
+       "      <td>3.430458</td>\n",
+       "      <td>3.418615</td>\n",
+       "      <td>1.447062</td>\n",
+       "      <td>4.434198</td>\n",
+       "      <td>2.761628</td>\n",
+       "      <td>1.619545</td>\n",
+       "      <td>2.928020</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.443913</td>\n",
+       "      <td>1.548262</td>\n",
+       "      <td>3.441401</td>\n",
+       "      <td>2.135884</td>\n",
+       "      <td>4.070135</td>\n",
+       "      <td>6.136931</td>\n",
+       "      <td>3.634571</td>\n",
+       "      <td>3.219230</td>\n",
+       "      <td>3.156719</td>\n",
+       "      <td>4.655691</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Cluster0  Cluster1  Cluster2  Cluster3  Cluster4  Cluster5  Cluster6  \\\n",
+       "0  1.696161  4.536685  6.127852  3.926013  3.412972  4.632360  2.845425   \n",
+       "1  1.909575  4.749588  5.971000  4.183972  3.933990  4.355470  3.283564   \n",
+       "2  1.893222  4.461418  6.040055  3.383904  3.215807  4.279613  4.806640   \n",
+       "3  1.828848  2.532328  3.790318  3.315197  3.314304  2.452660  4.474485   \n",
+       "4  1.628970  2.246099  3.793867  3.430458  3.418615  1.447062  4.434198   \n",
+       "\n",
+       "   Cluster7  Cluster8  Cluster9  ...  Cluster14  Cluster15  Cluster16  \\\n",
+       "0  4.403666  1.796766  3.350841  ...   1.718245   2.538189   4.155026   \n",
+       "1  4.142626  1.714990  5.916070  ...   1.482474   1.988572   3.510608   \n",
+       "2  3.918157  1.856143  3.856486  ...   1.645742   3.124133   4.694790   \n",
+       "3  2.222489  1.779858  2.956043  ...   1.580002   2.921369   4.179593   \n",
+       "4  2.761628  1.619545  2.928020  ...   1.443913   1.548262   3.441401   \n",
+       "\n",
+       "   Cluster17  Cluster18  Cluster19  Cluster20  Cluster21  Cluster22  Cluster23  \n",
+       "0   5.839576   3.842825   2.919723   7.224152   4.162687   3.580635   3.880045  \n",
+       "1   1.826526   3.914904   5.641148   6.555845   3.788034   3.828166   4.938936  \n",
+       "2   2.050864   3.797841   3.448345   4.227748   3.277330   2.918315   3.337664  \n",
+       "3   6.373088   3.689547   3.167665   6.572220   3.602345   2.388110   4.894440  \n",
+       "4   2.135884   4.070135   6.136931   3.634571   3.219230   3.156719   4.655691  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marker_genes_pvals = pd.DataFrame(adata_raw_norm.uns[\"dea_leiden\"][\"logfoldchanges\"])\n",
+    "marker_genes_pvals.columns = [\"Cluster\" + str(x) for x in range(0, len(adata_raw_norm.obs[\"leiden\"].unique()))]\n",
+    "marker_genes_pvals.head()"
    ]
   },
   {
