add creation of marker gene table after celltypist

--- a/ipynb/day2-4_visualization.ipynb
+++ b/ipynb/day2-4_visualization.ipynb
@@ -1698,6 +1698,61 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d8afd771-25ce-4ef7-8cbd-567e4d1000ef",
+   "metadata": {},
+   "source": [
+    "**Exercise 6:** Can you identify marker genes for each annotated cell type from `celltypist_annotations_high`? Do this similarly to how you did for the leiden clusters above, i.e., with the `sc.tl.rank_genes_groups` function, grouped by the annotated cell type. Can you convert the results into a pandas dataframe?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f234ffc-f411-4ec6-a20b-9a2667b62f86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<button onclick=\"toggleVisibility('answer6')\">Click for Answer</button>\n",
+    "<div id=\"answer6\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong> You should write the following code:\n",
+    "<pre>\n",
+    "    sc.tl.rank_genes_groups(adata_raw_norm, use_raw=False, \n",
+    "          groupby=\"celltypist_annotations_high\", method=\"wilcoxon\", key_added=\"dea_celltype\")\n",
+    "\n",
+    "    marker_genes = pd.DataFrame(adata_raw_norm.uns[\"dea_celltype\"][\"names\"])\n",
+    "    marker_genes.columns = [\"Cluster\" + str(x) for x in range(0, len(adata_raw_norm.obs[\"leiden\"].unique()))]\n",
+    "    marker_genes.head()\n",
+    "</pre>\n",
+    "    \n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script> </div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdc43b1b-1e2f-4f85-921f-d0c6759e668c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.tl.rank_genes_groups(\n",
+    "    adata_raw_norm, use_raw=False, groupby=\"leiden\", method=\"wilcoxon\", key_added=\"dea_leiden\"\n",
+    ")\n",
+    "\n",
+    "marker_genes = pd.DataFrame(adata_raw_norm.uns[\"dea_leiden\"][\"names\"])\n",
+    "marker_genes.columns = [\"Cluster\" + str(x) for x in range(0, len(adata_raw_norm.obs[\"leiden\"].unique()))]\n",
+    "marker_genes.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2ed38ccc-b266-4626-9b7b-c9ef703e22a1",
    "metadata": {},
    "source": [
