add creation of marker gene table after celltypist

--- a/ipynb/day2-4_visualization.ipynb
+++ b/ipynb/day2-4_visualization.ipynb
@@ -1705,11 +1705,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f234ffc-f411-4ec6-a20b-9a2667b62f86",
+   "cell_type": "markdown",
+   "id": "ff476dfc-0f51-4a21-8d0b-c497fdc1d55f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "<button onclick=\"toggleVisibility('answer6')\">Click for Answer</button>\n",
     "<div id=\"answer6\" style=\"display:none;\">\n",
@@ -1719,7 +1717,7 @@
     "          groupby=\"celltypist_annotations_high\", method=\"wilcoxon\", key_added=\"dea_celltype\")\n",
     "\n",
     "    marker_genes = pd.DataFrame(adata_raw_norm.uns[\"dea_celltype\"][\"names\"])\n",
-    "    marker_genes.columns = [\"Cluster\" + str(x) for x in range(0, len(adata_raw_norm.obs[\"leiden\"].unique()))]\n",
+    "    marker_genes.columns = sorted(list(adata_raw_norm.obs[\"celltypist_annotations_high\"].unique()))\n",
     "    marker_genes.head()\n",
     "</pre>\n",
     "    \n",
@@ -1733,22 +1731,6 @@
     "   }\n",
     "}\n",
     "</script> </div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdc43b1b-1e2f-4f85-921f-d0c6759e668c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc.tl.rank_genes_groups(\n",
-    "    adata_raw_norm, use_raw=False, groupby=\"leiden\", method=\"wilcoxon\", key_added=\"dea_leiden\"\n",
-    ")\n",
-    "\n",
-    "marker_genes = pd.DataFrame(adata_raw_norm.uns[\"dea_leiden\"][\"names\"])\n",
-    "marker_genes.columns = [\"Cluster\" + str(x) for x in range(0, len(adata_raw_norm.obs[\"leiden\"].unique()))]\n",
-    "marker_genes.head()"
    ]
   },
   {
@@ -1831,7 +1813,7 @@
    "source": [
     "We need to quickly repeat the analysis steps we have previously performed before, but this time on the two samples (PBMMC_1; i.e. `sample1_adata` and PBMMC_3; i.e. `sample3_adata`) independently:\n",
     "\n",
-    "**Exercise 6:** Repeat the following steps, once with `sample1_adata` and once with `sample3_adata`:\n",
+    "**Exercise 7:** Repeat the following steps, once with `sample1_adata` and once with `sample3_adata`:\n",
     "\n",
     "`sc.pp.highly_variable_genes` with `subset=True` and `n_top_genes=3000`\n",
     "\n",
@@ -1847,8 +1829,8 @@
    "id": "7f0b0a41-5129-4fca-a971-b3756e21fc99",
    "metadata": {},
    "source": [
-    "<button onclick=\"toggleVisibility('answer6')\">Click for Answer</button>\n",
-    "<div id=\"answer6\" style=\"display:none;\">\n",
+    "<button onclick=\"toggleVisibility('answer7')\">Click for Answer</button>\n",
+    "<div id=\"answer7\" style=\"display:none;\">\n",
     "<strong>Answer:</strong> You should write the following code:\n",
     "<pre>\n",
     "    sc.pp.highly_variable_genes(sample1_adata, subset=True, n_top_genes=3000)\n",
@@ -1968,7 +1950,7 @@
    "id": "2fa2f770-cc10-4596-a4a3-84382013ca2c",
    "metadata": {},
    "source": [
-    "**Exercise 7:** Run the `sc.tl.ingest` command, with `sample3_adata` as your unlabeled dataset and `sample1_adata` as your reference dataset. Transfer the label `celltypist_annotations_high` using the `pca` as the embedding method."
+    "**Exercise 8:** Run the `sc.tl.ingest` command, with `sample3_adata` as your unlabeled dataset and `sample1_adata` as your reference dataset. Transfer the label `celltypist_annotations_high` using the `pca` as the embedding method."
    ]
   },
   {
@@ -1976,8 +1958,8 @@
    "id": "8b4409d8-1544-4ec6-90f1-a2aab7ed9e21",
    "metadata": {},
    "source": [
-    "<button onclick=\"toggleVisibility('answer7')\">Click for Answer</button>\n",
-    "<div id=\"answer7\" style=\"display:none;\">\n",
+    "<button onclick=\"toggleVisibility('answer8')\">Click for Answer</button>\n",
+    "<div id=\"answer8\" style=\"display:none;\">\n",
     "<strong>Answer:</strong> You should write the following code:\n",
     "<pre>\n",
     "    sc.tl.ingest(adata=sample3_adata, \n",
