update notebooks to be ready for day 3

--- a/ipynb/day3-4_velocity2.ipynb
+++ b/ipynb/day3-4_velocity2.ipynb
@@ -21,7 +21,7 @@
    "id": "fe325f42-e712-4a4e-abca-54a1bfba7477",
    "metadata": {},
    "source": [
-    "A recent method has been developed called **VeloCycle** to estimate RNA velocity of the cell cycle on the real time scale. This method offers several advantages over existing approaches:\n",
+    "A [recent method](https://www.biorxiv.org/content/10.1101/2024.01.18.576093v1) has been developed called [**VeloCycle**](https://github.com/lamanno-epfl/velocycle) to estimate RNA velocity of the cell cycle on the real time scale. This method offers several advantages over existing approaches:\n",
     "- The ability to estimate uncertainty of velocity estimates (i.e. velocity confidence).\n",
     "- The ability to estimate both the low dimensional manifold and the velocity jointly.\n",
     "- The ability to perform statistical tests of velocity between conditions.\n",
