update exercises with link to slides

--- a/ipynb/day3-4_velocity2.ipynb
+++ b/ipynb/day3-4_velocity2.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f24e8d27-e92a-41be-bed8-58842605950c",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .large-link {\n",
+    "        font-size: 30px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        color: #333;\n",
+    "        text-decoration: none;\n",
+    "    }\n",
+    "</style>\n",
+    "<a href=\"../assets/pdf/13_velocycle.pdf\" target=\"_blank\" class=\"large-link\">Download Presentation: VeloCycle</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aafe09af-e2fc-4932-9bc6-0a540eaa2e80",
    "metadata": {},
    "source": [
